--- a/WindowsApp2/WindowsApp2.vbproj
+++ b/WindowsApp2/WindowsApp2.vbproj
@@ -94,6 +94,7 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="login.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
